--- a/client/src/index.css
+++ b/client/src/index.css
@@ -66,9 +66,11 @@ a .btn__landing:hover{
 
 .btn__landing{
   padding:.5rem 1.5rem;
-  font-size: 2.5rem;
+  font-size: 2.rem;
   background-color: rgb(219, 40, 40);
   border-radius: 30px;
   color: white
 };
+
+/********************************************************** home*/
 
