--- a/client/src/css/cards.css
+++ b/client/src/css/cards.css
@@ -7,3 +7,17 @@
   text-align: center;
   overflow-x: hidden;
 }
+
+
+@media only screen and (min-width:768px){
+  
+  .contenido__cards{
+    display: flex;
+    gap:1rem;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    
+
+  }
+
+}
