--- a/client/src/css/card.css
+++ b/client/src/css/card.css
@@ -1,16 +1,21 @@
 .card{
   background-color: var(--head__bg);
   border-radius: 15px;
-  max-width: 12rem;
-  height: 20rem;
+  max-width: 13rem;
+  height: 25rem;
   margin: 1rem auto;
   padding: 1rem;
   transition: all .4s ease-in;
 }
 
+img.cardImg{
+  width: 236px;
+  height: 236px ;
+}
+
 
 .card h2{
-  color: white;
+  color: var(--blanco);
   border-bottom: 2px solid var(--amarillo);
 }
 
