--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,7 @@
   --blanco:white;
   --amarillo:rgb(255, 203, 5);
   --head__bg:rgba(20, 73, 218, 0.678);
+  --rojo:rgb(219, 40, 40)
 };
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300&family=Oswald:wght@200;300;400;600&display=swap');
@@ -96,7 +97,7 @@ a .btn__landing:hover{
 .btn__landing{
   padding:.5rem 1.5rem;
   font-size: 2.rem;
-  background-color: rgb(219, 40, 40);
+  background-color: var(--rojo);
   border-radius: 30px;
   color: var(--blanco);
 };
