--- a/client/src/css/paginado.css
+++ b/client/src/css/paginado.css
@@ -2,7 +2,11 @@
 .paginate ul{
   list-style: none;
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
+  padding: 0;
+  max-width: 800px;
 }
 
 
@@ -15,4 +19,10 @@
 
 .paginateBtn:hover{
   background-color: var(--rojo);
+}
+
+.paginateModule{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
