--- a/client/src/css/detail.css
+++ b/client/src/css/detail.css
@@ -5,5 +5,22 @@
   background-size: cover;
   width: 100%;
   height: 100vh;
+  overflow: scroll;
 }
 
+.pokemonDetail h1{
+  text-align: center;
+  font-family: var(--otros__textos) ;
+}
+
+.detailsData{
+  padding: 1rem;
+}
+
+@media only screen and (min-width:768px){
+
+  .detailsData{
+    display: flex;
+    justify-content: space-between;
+  }
+}
