--- a/client/src/css/cards.css
+++ b/client/src/css/cards.css
@@ -3,6 +3,7 @@
   background-color: rgba(246, 247, 248, 0.266);
   border-radius: 20px;
   margin-top: 2rem;
+  margin-bottom: 2rem ;
   padding: 1rem 0;
   text-align: center;
   overflow-x: hidden;
