--- a/client/src/css/detail.css
+++ b/client/src/css/detail.css
@@ -8,6 +8,17 @@
   overflow: scroll;
 }
 
+.contenido__cards.Dtl{
+  align-items: center;
+  justify-content: center;
+}
+
+.pokemonDetail{
+  width: 95%;
+  margin: 0 auto;
+  padding:1rem;
+}
+
 .pokemonDetail h1{
   text-align: center;
   font-family: var(--otros__textos) ;
@@ -15,12 +26,23 @@
 
 .detailsData{
   padding: 1rem;
+  background-color: rgba(198, 57, 57, 0.65);
+  border-radius: 15px;
+  border: 2px double black;
+  box-shadow: 10px 10px 30px -1px rgba(0,0,0,0.75);
+  max-width: 95%;
 }
 
 @media only screen and (min-width:768px){
 
   .detailsData{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
+    gap:1rem
+  }
+
+  .detailsInfo, .detailsImg{
+    flex-basis: calc(50% - 1rem);
   }
 }
